<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="#2C1854"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.eventCreation.EventCreationActivity">

    <Button
        android:id="@+id/button_capture"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="648dp"
        android:onClick="captureImage"
        android:text="Set Event Cover"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_above="@+id/button_capture"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/button_capture"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="96dp" />

    <EditText
        android:id="@+id/idEdtEventName"
        android:layout_width="304dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_name"
        android:imeActionLabel="@string/action_sign_in_short"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover_image"

        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/idEdtEventLocation"
        android:layout_width="304dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_location"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventName" />

    <EditText
        android:id="@+id/idEdtEventDuration"
        android:layout_width="304dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_duration"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventLocation" />

    <EditText
        android:id="@+id/idEdtEventCapacity"
        android:layout_width="304dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_capacity"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDuration" />

    <EditText
        android:id="@+id/idEdtEventDate"
        android:layout_width="304dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_date"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventCapacity" />

    <EditText
        android:id="@+id/idEdtEventDescription"
        android:layout_width="304dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_description"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDate" />

    <Button
        android:id="@+id/idBtnSubmitEvent"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="5dp"
        android:text="Create Event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDate"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>