<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="#2C1854"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EventCreateFragment">

    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="265dp"
        android:layout_height="173dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/text_margin"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_view_vector"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-1dp" />

    <EditText
        android:id="@+id/idEdtEventName"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_name"
        android:imeActionLabel="@string/action_sign_in_short"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover_image"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/idEdtEventLocation"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_location"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventName" />

    <EditText
        android:id="@+id/idEdtEventDuration"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_duration"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventLocation" />

    <EditText
        android:id="@+id/idEdtEventCapacity"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_capacity"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDuration" />

    <EditText
        android:id="@+id/idEdtEventDate"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_date"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventCapacity" />

    <EditText
        android:id="@+id/idEdtEventDescription"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#9A8FAF"
        android:hint="@string/Enter_Event_description"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDate" />

    <EditText
        android:id="@+id/linkPaid"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="16dp"
        android:background="#9A8FAF"
        android:hint="Enter event link"
        android:selectAllOnFocus="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/idBtnSubmitEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDescription"
        app:layout_constraintVertical_bias="0.857"
        tools:visibility="visible" />

    <Button
        android:id="@+id/idBtnSubmitEvent"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:text="Create Event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDescription"
        app:layout_constraintVertical_bias="0.448" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="Paid Event"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDescription" />

    <Button
        android:id="@+id/event_cover"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/add_photo"
        android:backgroundTint="#FFA500"
        app:layout_constraintBottom_toBottomOf="@id/cover_image"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>